HDS-5084 `Form::RadioCard` - Fix bug with hover styles visible disabled state

--- a/packages/components/src/styles/components/form/radio-card.scss
+++ b/packages/components/src/styles/components/form/radio-card.scss
@@ -76,8 +76,7 @@
     }
   }
 
-  &--disabled,
-  &.mock-disabled {
+  &.hds-form-radio-card--disabled {
     background-color: var(--token-color-surface-interactive-disabled);
     border-color: var(--token-color-border-primary);
     box-shadow: none;
